tests/api/reference/negative/12-list-set-index.asm
const invalid: list = list.set(list.of(1), 1, 2)
